red guild messages now logged