@@ -7,7 +7,7 @@ minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
 loader_version=0.15.11
 # Mod Properties
-mod_version=1.1.0-beta.6
+mod_version=1.1.0-beta.7
 maven_group=pixlze.guildapi
 archives_base_name=guildapi
 # Dependencies
