@@ -1,1 +1,6 @@
-red guild messages now logged
+### New Features
+- Add /online command for checking online mod users
+- Add highlighting when someone mentions your name in discord bridging messages
+
+### Bug Fixes
+- Actually fixed issue with account switching mods like Essential
